--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,7 @@ h2 {
     /* height:75px; */
     position:relative;
     /* left: 50%; */
-    width: 40%;
+    width: 45%;
     margin:16px;
     
 
@@ -168,9 +168,21 @@ h2 {
     /* height:75px; */
     position:relative;
     /* left: 50%; */
-    width: 40%;
+    width: 45%;
     margin:16px;
-    margin-top: -25px;
-    
+    /* margin-top: -25px; */
 
+}
+
+#project1 {
+    width: 100%;
+    height: 400px;
+    /* margin: 16px; */
+    padding: 5px 16px;
+}
+
+#project2, 
+#project3,
+#project4 {
+    width: 33%;
 }
