--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,208 +1,34 @@
+
+
+
 * {
-    color:white;
+    margin: 0;
 }
 
-body,html {
-    margin:0;
-    font-family:sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 24px;
-    color:white;
-    background-color:black;
-    display: block;
-
-    text-align: left;
-    height: 100%;
-}
-
-*, ::after,::before {
-    box-sizing: border-box;
-}
-
-html {
-    text-size-adjust: 100%;
-}
-
-a{
-    text-decoration: none;
-}
-a:hover {
-    cursor: pointer;
-}
-nav {
-    margin-bottom:30px;
-    position:relative;
-    display:flex;
-    flex-wrap: wrap;
-    align-items:center;
-    justify-content: space-between;
-    padding: 8px 16px;
-    margin: 8px;
-    font-size:18px;
-}
-
-.navleft {
-    /* position: absolute; */
-    left: 10px;
-    top: 2px;
-
-}
-
-
-.navright a{
-    /* justify-content:flex-end; */
-    padding: 8px 16px;
-    /* display: block; */
-}
-h1,h2,h3,h4,h5,h6 {
-    margin-bottom:6px;
-    font-family: inherit;
-    font-weight: 500;
-    line-height: 24px;
-    margin-top: 0px;
-
-}
-
-h2 {
-    font-size:32px;
-    /* display: block; */
-    margin-block: 8px;
-    margin-inline: 0px;
-}
-
-.hero-image {
-    background-image:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../images/placeholder1.jpeg");
-
-    height: 75%;
-    background-position: center;
+body {
+    background-image: url(../images/Untitled_Artwork\ 2.png);
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
-    /* margin: 10px; */
-    box-shadow: 0px 0px 15px 5px inset black;
-    /* box-shadow: 0px -25px 50px 5px inset black; */
-    /* border-bottom: 10px solid black; */
-
-}
-.hero-text {
-    text-align:center;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
-    color:white;
-    padding: 30px;
-
+    background-color: black;
+    color: aliceblue;
 }
 
-.hero-text img {
-    vertical-align: middle;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-
+nav {
+    border: 2px solid black;
 }
 
-.aboutme{
-    /* margin: 8px; */
-    padding: 20px;
-    display: flex;
-    /* margin-top: 15px; */
-    align-items: center;
-    /* align-content: flex-end; */
-    
+.hero-container {
+    border: 2px solid mediumorchid;
 }
 
-.aboutme h2{
-    /* align-items: center; */
-    /* padding-top: 16px; */
-    float: inline-start;
-    width: 17%;
-    padding-right: 5px;
+.about-container {
+    border:2px solid  mediumvioletred;
 }
 
-.aboutme p{
-    position: relative;
-    float: right;
-    margin-right: 16px;
-    left: 25px;
-    margin-top:1%;
-
-}
-.divider {
-    border-left: 3px solid orange;
-    height:75px;
-    position:relative;
-    /* left: 50%; */
-    top: 0;
-
+.portfolio-container {
+    border: 2px solid orangered;
 }
 
-.portfolio {
-    display: inline-flexbox;
-    align-content: center;
-
+.contact-container {
+    border: 2px solid goldenrod;
 }
-
-.portfolio h2 {
-    text-align: center;
-}
-
-.space {
-    display:flex;
-    justify-content: space-evenly;
-}
-.divider-left{
-    border-bottom: 3px solid orange;
-    /* height:75px; */
-    position:relative;
-    /* left: 50%; */
-    width: 45%;
-    margin:16px;
-    
-
-}
-.divider-right{
-    border-bottom: 3px solid orange;
-    /* height:75px; */
-    position:relative;
-    /* left: 50%; */
-    width: 45%;
-    margin:16px;
-    /* margin-top: -25px; */
-
-}
-
-#project1 {
-    width: 100%;
-    height: 400px;
-    /* margin: 16px; */
-    padding: 5px 16px;
-    position:relative;
-    display: block;
-}
-
-#project2, 
-#project3,
-#project4 {
-    width: 33%;
-    position:relative;
-    display: inline-block;
-}
-
-.container {
-    position: relative;
-    text-align: center;
-    color:white;
-}
-
-.bottom-left {
-    position:relative;
-    left:16px;
-    z-index: 100;
-}
-
-.projects img:hover{
-    box-shadow: 0px                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         0px 5px 10px rgb(146, 136, 136),0 0 15px rgb(146, 136, 136);
-} 
