--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,14 +3,20 @@
 
 * {
     margin: 0;
+
+}
+body {
+    background-color: black;
 }
 
+/* ///////////////////// NAVIGATION ///////////////////////// */
 header {
     background-image: url(../images/background.png);
     background-repeat: no-repeat;
-    background-size:cover;
+    background-size:100% 100%;
     background-color: black;
     color: aliceblue;
+
 }
 
 nav {
@@ -43,26 +49,70 @@ nav {
     font-family: 'Aqua Grotesque', sans-serif;
 }
 
-.hero-container {
-    padding: 2rem;
-    display:flex;
-    justify-content: center;
-    text-align: center;
+/* ////////////////////////// HERO CONTAINER ////////////////////////// */
+.background {
+    display: flex;
+    justify-content:center;
     height: 55rem;
 }
 
+.hero-container {
+    height: 13rem;
+    margin-top: 15rem;
+    padding: 3rem;
+
+    text-align: center;
+    font-family: 'Aqua Grotesque', sans-serif;
+    color: aliceblue;
+
+    background-color:rgb(0,0,0,0.7);
+    box-shadow: 0px 0px 2px 2px rgba(231,241,249);
+
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
 .profile-picture {
-    width:12rem;
-    height: 10rem;
+    width:15rem;
+    height: 15rem;
     border-radius: 50%;
     border: 2px solid mediumorchid;
 
 }
 
-.hero-container h2, .hero-container h4 {
-    font-family: 'Aqua Grotesque', sans-serif;
+.hero-container h2 {
+    font-size: 4rem;
+    color: rgb(76,191,131)
 }
 
+.hero-container h4 {
+    justify-self: left;
+}
+/* ////////////////////////// ABOUT ME ////////////////////////// */
+
+main {
+    color:aliceblue;
+    font-family: 'Aqua Grotesque', sans-serif;
+    padding: 1rem;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ///////////////////////// MEDIA QUERIES //////////////////////////*/
 @media screen and (max-width: 700px) {
     header {
         min-height:45rem;
@@ -113,22 +163,4 @@ nav {
     .hero-container h4 {
     }
 
-}
-
-main {
-    background-color: black;
-    font-family:  'Roboto', sans-serif;
-    color: aliceblue;
-}
-.about-container {
-    border-top:2px solid  mediumvioletred;
-    
-}
-
-.portfolio-container {
-    border-top: 2px solid orangered;
-}
-
-.contact-container {
-    border-top: 2px solid goldenrod;
 }
