--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,13 +74,7 @@ nav {
     align-items: center;
 }
 
-.profile-picture {
-    width:15rem;
-    height: 15rem;
-    border-radius: 50%;
-    border: 2px solid mediumorchid;
 
-}
 
 .hero-container h2 {
     font-size: 4rem;
@@ -98,17 +92,70 @@ main {
     padding: 1rem;
 }
 
+.about-container {
+    display: flex;
+    margin: 2rem 0rem 1rem 1rem;
+    height: 28rem;
+    border: 5px solid orange;
+    padding: 2.5rem;
+
+}
+
+.profile-picture {
+    width:100%;
+    height: 100%;
+    display:flex;
+    justify-content: center;
+    flex-basis: 50%;
+
+}
+
+.profile-picture img {
+    border-radius: 50%;
+    border: 2px solid mediumorchid;
+    box-shadow: 0px 0px 10px 5px mediumorchid;
+
+}
+
+.biography {
+    display: flex;
+    flex-direction: column;
+    padding-right: 2rem;
+    padding-left: 1rem;
+    align-content: center;
+    padding-top: 2rem;
+}
+
+.biography p {
+    font-family: 'Roboto', sans-serif;
+    font-size: larger;
+    padding: 1rem 0rem;
+}
+
+.about-me-text {
+    display: inline-flex;
+    line-height: 3rem!important;
 
 
+}
+.about-me-title {
+    padding-left:0;
+    flex-basis: 29%;
+    position: bottom;
+    margin-bottom: 0;
+    font-size: 3.75rem;
+    line-height: 3.75rem !important;
+    
+}
+.divider-right {
+    border-bottom: 5px solid orange;
+    width: 70%;
+    text-align: left;
+    margin-top: 1.5rem;
+    height: 0px;
 
 
-
-
-
-
-
-
-
+}
 
 
 
