--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,22 +101,22 @@ main {
 
 }
 
+/* ///////// Profile Picture ///////// */
 .profile-picture {
     width:100%;
     height: 100%;
     display:flex;
     justify-content: center;
     flex-basis: 50%;
-
 }
 
 .profile-picture img {
     border-radius: 50%;
     border: 2px solid mediumorchid;
     box-shadow: 0px 0px 10px 5px mediumorchid;
-
 }
 
+/* ///////////// About Me Title and Biography ////////////*/
 .biography {
     display: flex;
     flex-direction: column;
@@ -132,11 +132,10 @@ main {
     padding: 1rem 0rem;
 }
 
+/* About Me Container  */
 .about-me-text {
     display: inline-flex;
     line-height: 3rem!important;
-
-
 }
 .about-me-title {
     padding-left:0;
@@ -153,8 +152,6 @@ main {
     text-align: left;
     margin-top: 1.5rem;
     height: 0px;
-
-
 }
 
 
