--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ main {
 .about-container {
     display: flex;
     margin: 2rem 0rem 1rem 1rem;
-    height: 28rem;
+    height: 45rem;
     border: 5px solid orange;
     padding: 2.5rem;
 
@@ -107,13 +107,16 @@ main {
     height: 100%;
     display:flex;
     justify-content: center;
-    flex-basis: 50%;
+    flex-basis: 90%;
+    margin: 0px 2rem;
 }
 
 .profile-picture img {
     border-radius: 50%;
     border: 2px solid mediumorchid;
     box-shadow: 0px 0px 10px 5px mediumorchid;
+    width: 100%;
+    height: 100%;
 }
 
 /* ///////////// About Me Title and Biography ////////////*/
@@ -128,7 +131,7 @@ main {
 
 .biography p {
     font-family: 'Roboto', sans-serif;
-    font-size: larger;
+    font-size: medium;
     padding: 1rem 0rem;
 }
 
