--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,28 +95,29 @@ main {
 .about-container {
     display: flex;
     margin: 2rem 0rem 1rem 1rem;
-    height: 45rem;
-    border: 5px solid orange;
+    height: 37rem;
+    /* border: 5px solid orange; */
     padding: 2.5rem;
 
 }
 
 /* ///////// Profile Picture ///////// */
 .profile-picture {
-    width:100%;
-    height: 100%;
+    width:600px;
+    height: 600px;
     display:flex;
     justify-content: center;
     flex-basis: 90%;
     margin: 0px 2rem;
+    align-content: center;
 }
 
 .profile-picture img {
     border-radius: 50%;
     border: 2px solid mediumorchid;
     box-shadow: 0px 0px 10px 5px mediumorchid;
-    width: 100%;
-    height: 100%;
+    width: 75%;
+    height: 75%;
 }
 
 /* ///////////// About Me Title and Biography ////////////*/
@@ -142,7 +143,7 @@ main {
 }
 .about-me-title {
     padding-left:0;
-    flex-basis: 29%;
+    flex-basis: 32%;
     position: bottom;
     margin-bottom: 0;
     font-size: 3.75rem;
