styling of portfolio cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,11 +185,11 @@ main {
 .cards {
     display: flex;
     flex-direction: row;
-
+    justify-content: space-evenly;
 
 }
 .project-1, .project-2, .project-3 {
-    border: 5px blue solid;
+    /* border: 5px blue solid; */
     width: 30%;
     height: 267px;
     /* image-rendering: initial; */
@@ -197,21 +197,10 @@ main {
     background-color:  none;
     background-repeat: no-repeat;
     background-size: contain;
+    margin: 1rem;
+    box-shadow: 0px 0px 10px 5px gray;
 }
-.project-1 a {
 
-    /* background-position: contain; */
-    /* width: 2.75rem;
-    height: 100px; */
-    /* width: 200px;
-    height: 200px; */
-    /* height: 160px;
-    /* padding-left:100%;
-    padding-top:100px; */
-    /* width: 110%;  */
-
-
-}
 .project-1 {
     background-image: url('../images/weather-dashboard.png');
 }
@@ -221,6 +210,7 @@ main {
 }
 .project-3 {
     background-image: url('../images/work-day-scheduler.png');
+    background-size: cover;
 }
 
 /* ///////////////////////// MEDIA QUERIES //////////////////////////*/
