--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 
 /* ///////////////////// NAVIGATION ///////////////////////// */
 header {
-    background-image: url(../images/background.png);
+    background-image: url(../images/background_v4.png);
     background-repeat: no-repeat;
     background-size:100% 100%;
     background-color: black;
@@ -47,6 +47,10 @@ nav {
     text-decoration: none;
     color:aliceblue;
     font-family: 'Aqua Grotesque', sans-serif;
+}
+
+header a:hover {
+    color:mediumseagreen;
 }
 
 /* ////////////////////////// HERO CONTAINER ////////////////////////// */
@@ -151,7 +155,7 @@ main {
     
 }
 .divider-right {
-    border-bottom: 5px solid orange;
+    border-bottom: 5px solid mediumturquoise;
     width: 70%;
     text-align: left;
     margin-top: 1.5rem;
@@ -159,13 +163,16 @@ main {
 }
 
 /* //////////////////////// PORTFOLIO ////////////////////////////*/
+.portfolio-container {
+    margin-bottom: 1rem;
+}
 .portfolio-container-title {
     display: flex;
     justify-content: space-evenly;
 }
 
 .divider-left {
-    border-bottom: 5px solid orange;
+    border-bottom: 5px solid mediumturquoise;
     flex-basis: 38%;
     text-align: left;
     margin-top: 1.5rem;
@@ -174,6 +181,7 @@ main {
 }
 .portfolio-container-title .divider-right {
     flex-basis: 40%;
+    border-bottom-color: mediumturquoise;
 }
 
 .portfolio-container-title h2 {
@@ -181,37 +189,120 @@ main {
     font-size: 3.75rem;
 }
 
+/* //////////////////////// CONTACT ME ////////////////////////////*/
+.contact-me-container-title {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.contact-me-container-title .divider-left {
+    border-bottom-color: mediumturquoise;
+}
+.contact-me-container-title .divider-right {
+    flex-basis: 40%;
+    margin-right: 1rem;
+    border-bottom-color: mediumturquoise;
+}
+
+.contact-me-container-title h2 {
+    flex-basis: 25%;
+    font-size: 3rem;
+    padding-left: 1rem;
+    text-align: center;
+}
+
+.contact-me-content {
+    display: flex;
+    justify-content: space-evenly;
+    margin: 5rem;
+    font-size: 2rem;
+    font-family: 'Roboto', sans-serif;
+    font-weight:300;
+
+    cursor: pointer;
+
+}
+.contact-me-content a {
+    color:mediumpurple;
+    text-decoration: none;
+}
+
+.contact-me-content a:hover {
+    color: mediumorchid;
+}
 /*//////// Project Cards /////////*/
 .cards {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-
+    flex-wrap: wrap;
+    padding: 1rem;
 }
-.project-1, .project-2, .project-3 {
-    /* border: 5px blue solid; */
+.cards p {
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+}
+.project-1-container,.project-2-container, .project-3-container {
+    display: flex;
+    flex-direction: column;
     width: 30%;
-    height: 267px;
-    /* image-rendering: initial; */
-    /* flex: 1 1 400px; */
-    background-color:  none;
-    background-repeat: no-repeat;
-    background-size: contain;
-    margin: 1rem;
-    box-shadow: 0px 0px 10px 5px gray;
 }
 
-.project-1 {
+.project-1,.project-2, .project-3 {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 272px;
+    border: 2px darkslategrey solid;
+} 
+
+#project-1 {
     background-image: url('../images/weather-dashboard.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width:100%;
+    height: 100%;
 }
-.project-2 {
 
+#project-1:hover {
+    background-image: url('../images/weather-dashboard-onhover.png');
+
+}
+
+#project-2 {
     background-image: url('../images/coding-quiz.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    width:100%;
+    height: 100%;
 }
-.project-3 {
+
+#project-2:hover {
+    background-image: url('../images/coding-quiz-hover.png');
+
+}
+
+#project-3 {
     background-image: url('../images/work-day-scheduler.png');
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    width:100%;
+    height: 100%;
 }
+
+#project-3:hover {
+    background-image: url('../images/work-day-scheduler-onhover.png');
+}
+#project-1:hover,#project-2:hover,#project-3:hover {
+    box-shadow: 0px 0px 10px 5px mediumorchid;
+}
+.project-1-container p a:hover, .project-2-container p a:hover, .project-3-container p a:hover {
+    cursor: pointer;
+}
+
+
+
+
 
 /* ///////////////////////// MEDIA QUERIES //////////////////////////*/
 @media screen and (max-width: 700px) {
