--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 
 /* ///////////////////// NAVIGATION ///////////////////////// */
 header {
-    background-image: url(../images/background_v4.png);
+    background-image: url(../images/background_NoLake_v5.png);
     background-repeat: no-repeat;
     background-size:100% 100%;
     background-color: black;
