--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,5 +24,5 @@ main {
   background-color:rgb(0,0,0,0.5);
   box-shadow: 0px 0px 2px 2px rgba(231,241,249);
   height: 30vh;
-  /* margin: 50vh; */
+  /* margivh; */
 }
