--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 html, body {
   height: 100vh;
+  background-color: black;
 }
 main {
   height: 100vh;
@@ -21,8 +22,25 @@ main {
 }
 
 .mask {
-  background-color:rgb(0,0,0,0.5);
-  box-shadow: 0px 0px 2px 2px rgba(231,241,249);
-  height: 30vh;
+  /* background-color:rgb(0,0,0,0.5);
+  box-shadow: 0px 0px 2px 2px rgba(231,241,249); */
+ height: 40vh;
   /* margivh; */
+  font-family: 'Aqua Grotesque', sans-serif;
+}
+
+.mask h1{
+  font-size: 5rem;
+  color: rgb(76,191,131);
+  text-shadow: 2px 10px 10px 10px white;
+}
+
+.mask h4 {
+  color: aliceblue;
+  text-align: left;
+}
+
+.py-6 {
+  padding-top: 3.25rem;
+  padding-bottom: 3.25rem;
 }
