--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,30 +15,39 @@ main {
   overflow-y: auto;
 }
 
-#cover-text  {
-  background-color: rgba(178, 60, 253, 0.6);
-  flex-direction: column;
-
-}
+/*///// COVER TEXT /////*/
 
 .mask {
-  /* background-color:rgb(0,0,0,0.5);
-  box-shadow: 0px 0px 2px 2px rgba(231,241,249); */
  height: 40vh;
-  /* margivh; */
   font-family: 'Aqua Grotesque', sans-serif;
 }
 
 .mask h1{
   font-size: 5rem;
   color: rgb(76,191,131);
-  text-shadow: 2px 10px 10px 10px white;
 }
 
 .mask h4 {
   color: aliceblue;
   text-align: left;
 }
+
+/*///// ABOUT ME //////*/
+
+#about-me-img {
+ text-align: center;
+
+}
+
+
+#about-me-img img {
+  border-radius: 65px;
+  box-shadow: 0px 0px 10px 10px slategray;
+  border: 5px  solid aliceblue;
+  /* border-right: 2px solid aliceblue;  */
+}
+
+/* ADDING ONTO BOOTSTRAP */
 
 .py-6 {
   padding-top: 3.25rem;
