finished up About Me section. Added in text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,13 +39,13 @@ main {
 
 }
 
-
 #about-me-img img {
   border-radius: 65px;
   box-shadow: 0px 0px 10px 10px slategray;
   border: 5px  solid aliceblue;
-  /* border-right: 2px solid aliceblue;  */
 }
+
+/* Eventually make it so that its an auto carousel */
 
 /* ADDING ONTO BOOTSTRAP */
 
